--- a/tiimi.html
+++ b/tiimi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 13:25:58 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 13:33:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed14" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -172,7 +172,7 @@
               <div class="brand-item"><img src="images/Maakymppi.webp" loading="lazy" sizes="(max-width: 1325px) 100vw, 1325px" srcset="images/Maakymppi-p-500.webp 500w, images/Maakymppi.webp 1325w" alt="Maakymppi Oy logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/La_Reine.webp" loading="lazy" alt="La Reine logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/Tilintarkastus_Venitar.webp" loading="lazy" sizes="(max-width: 1395px) 100vw, 1395px" srcset="images/Tilintarkastus_Venitar-p-500.webp 500w, images/Tilintarkastus_Venitar-p-800.webp 800w, images/Tilintarkastus_Venitar-p-1080.webp 1080w, images/Tilintarkastus_Venitar.webp 1395w" alt="Tilintarkastus Venitar logo" class="brand-item-thumb"></div>
-              <div class="brand-item"><img src="images/Softhaven.webp" loading="lazy" alt="Softhaven logo" class="brand-item-thumb"></div>
+              <div class="brand-item"><img src="images/softhaven-logo.webp" loading="lazy" alt="Softhaven logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/SWISSGriP.webp" loading="lazy" sizes="(max-width: 2141px) 100vw, 2141px" srcset="images/SWISSGriP-p-500.webp 500w, images/SWISSGriP-p-800.webp 800w, images/SWISSGriP-p-1080.webp 1080w, images/SWISSGriP.webp 2141w" alt="Swissgrip Nordic logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/Neste.webp" loading="lazy" alt="Neste logo" class="brand-item-thumb"></div>
             </div>
@@ -184,7 +184,7 @@
               <div class="brand-item"><img src="images/Maakymppi.webp" loading="lazy" sizes="(max-width: 1325px) 100vw, 1325px" srcset="images/Maakymppi-p-500.webp 500w, images/Maakymppi.webp 1325w" alt="Maakymppi Oy logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/La_Reine.webp" loading="lazy" alt="La Reine logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/Tilintarkastus_Venitar.webp" loading="lazy" sizes="(max-width: 1395px) 100vw, 1395px" srcset="images/Tilintarkastus_Venitar-p-500.webp 500w, images/Tilintarkastus_Venitar-p-800.webp 800w, images/Tilintarkastus_Venitar-p-1080.webp 1080w, images/Tilintarkastus_Venitar.webp 1395w" alt="Tilintarkastus Venitar logo" class="brand-item-thumb"></div>
-              <div class="brand-item"><img src="images/Softhaven.webp" loading="lazy" alt="Softhaven logo" class="brand-item-thumb"></div>
+              <div class="brand-item"><img src="images/softhaven-logo.webp" loading="lazy" alt="Softhaven logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/SWISSGriP.webp" loading="lazy" sizes="(max-width: 2141px) 100vw, 2141px" srcset="images/SWISSGriP-p-500.webp 500w, images/SWISSGriP-p-800.webp 800w, images/SWISSGriP-p-1080.webp 1080w, images/SWISSGriP.webp 2141w" alt="Swissgrip Nordic logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/Neste.webp" loading="lazy" alt="Neste logo" class="brand-item-thumb"></div>
             </div>
@@ -196,7 +196,7 @@
               <div class="brand-item"><img src="images/Maakymppi.webp" loading="lazy" sizes="(max-width: 1325px) 100vw, 1325px" srcset="images/Maakymppi-p-500.webp 500w, images/Maakymppi.webp 1325w" alt="Maakymppi Oy logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/La_Reine.webp" loading="lazy" alt="La Reine logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/Tilintarkastus_Venitar.webp" loading="lazy" sizes="(max-width: 1395px) 100vw, 1395px" srcset="images/Tilintarkastus_Venitar-p-500.webp 500w, images/Tilintarkastus_Venitar-p-800.webp 800w, images/Tilintarkastus_Venitar-p-1080.webp 1080w, images/Tilintarkastus_Venitar.webp 1395w" alt="Tilintarkastus Venitar logo" class="brand-item-thumb"></div>
-              <div class="brand-item"><img src="images/Softhaven.webp" loading="lazy" alt="Softhaven logo" class="brand-item-thumb"></div>
+              <div class="brand-item"><img src="images/softhaven-logo.webp" loading="lazy" alt="Softhaven logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/SWISSGriP.webp" loading="lazy" sizes="(max-width: 2141px) 100vw, 2141px" srcset="images/SWISSGriP-p-500.webp 500w, images/SWISSGriP-p-800.webp 800w, images/SWISSGriP-p-1080.webp 1080w, images/SWISSGriP.webp 2141w" alt="Swissgrip Nordic logo" class="brand-item-thumb"></div>
               <div class="brand-item"><img src="images/Neste.webp" loading="lazy" alt="Neste logo" class="brand-item-thumb"></div>
             </div>
