--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 13:33:25 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 13:59:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -370,7 +370,7 @@
                   <div class="project-cms-item">
                     <div class="projects-cms-item">
                       <div class="projects-item">
-                        <a href="https://finhem.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/FINHEM_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/FINHEM_Mockup.webp 500w, images/FINHEM_Mockup.webp 800w, images/FINHEM_Mockup.webp 1080w, images/FINHEM_Mockup.webp 1600w, images/FINHEM_Mockup.webp 2000w, images/FINHEM_Mockup.webp 2600w, images/FINHEM_Mockup.webp 2800w" alt="FINHEM Oy mallikuva" class="projects-thumb">
+                        <a href="https://finhem.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/FINHEM_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/FINHEM_Mockup-p-500.webp 500w, images/FINHEM_Mockup-p-800.webp 800w, images/FINHEM_Mockup-p-1080.webp 1080w, images/FINHEM_Mockup-p-1600.webp 1600w, images/FINHEM_Mockup-p-2000.webp 2000w, images/FINHEM_Mockup-p-2600.webp 2600w, images/FINHEM_Mockup.webp 2800w" alt="FINHEM Oy mallikuva" class="projects-thumb">
                           <div class="projects-btn-wrap">
                             <div class="projects-btn-text">Tutustu</div>
                             <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -644,6 +644,21 @@
                         </div>
                       </div>
                     </a>
+                    <a data-w-tab="Tab 6" data-w-id="db83eeee-64b0-5ced-2dac-5dac1266cb94" class="faq-accordion-item w-inline-block w-tab-link">
+                      <div class="faq-item last">
+                        <div class="faq-title-wrap">
+                          <h3 class="faq-title">Paljonko logon suunnittelu maksaa?</h3>
+                          <div class="faq-icon">
+                            <div class="faq-icon-plus"></div>
+                            <div class="faq-icon-minus"></div>
+                          </div>
+                        </div>
+                        <div class="faq-text-wrap">
+                          <p class="faq-text"><strong class="bold-text">Riippuu!</strong></p>
+                          <p class="faq-text">Jos tilaat vain logon, hinta on 200 €. Jos logo tehdään samalla kun verkkosivut, hinta on 125 € (+ ALV 25.5%). Logo toimitetaan kaikissa tiedostomuodoissa (jpg. png. pdf. vector. source.).</p>
+                        </div>
+                      </div>
+                    </a>
                   </div>
                   <div class="hide w-tab-content">
                     <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active"></div>
@@ -651,6 +666,7 @@
                     <div data-w-tab="Tab 3" class="w-tab-pane"></div>
                     <div data-w-tab="Tab 4" class="w-tab-pane"></div>
                     <div data-w-tab="Tab 5" class="w-tab-pane"></div>
+                    <div data-w-tab="Tab 6" class="w-tab-pane"></div>
                   </div>
                 </div>
               </div>
