Update homepage styling

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 13:59:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 15:10:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -262,16 +262,6 @@
             </div>
             <div data-w-id="95e1b8aa-839c-1be8-40fa-22fc4df5f77d" class="services-layout">
               <div class="services-item">
-                <div class="services-icon-wrap"><img src="images/suunnittelu-ikoni.svg" loading="lazy" alt="Suunnittelu ikoni" class="services-icon"></div>
-                <div class="services-title-wrap">
-                  <h2 class="services-title">Logot</h2>
-                </div>
-                <div class="services-text-wrap">
-                  <p class="services-text">Suunnittelemme ajattomia ja selkeitä logoja, jotka toimivat saumattomasti kaikissa kanavissa.</p>
-                </div>
-                <div class="services-thumb-wrap"><img src="images/taustakuva-3.svg" loading="lazy" alt="Taustakuva" class="services-thumb"></div>
-              </div>
-              <div class="services-item">
                 <div class="services-icon-wrap"><img src="images/service-icon-1.svg" loading="lazy" alt="a computer monitor with a blank screen" class="services-icon"></div>
                 <div class="services-title-wrap">
                   <h2 class="services-title">Verkkosivut</h2>
@@ -280,6 +270,16 @@
                   <p class="services-text">Toteutamme selkeitä, responsiivisia ja teknisesti huolellisesti rakennettuja sivustoja, jotka tukevat liiketoimintaasi.</p>
                 </div>
                 <div class="services-thumb-wrap"><img src="images/varikas-tausta.svg" loading="lazy" alt="Taustakuva" class="services-thumb"></div>
+              </div>
+              <div class="services-item">
+                <div class="services-icon-wrap"><img src="images/suunnittelu-ikoni.svg" loading="lazy" alt="Suunnittelu ikoni" class="services-icon"></div>
+                <div class="services-title-wrap">
+                  <h2 class="services-title">Logot</h2>
+                </div>
+                <div class="services-text-wrap">
+                  <p class="services-text">Suunnittelemme ajattomia ja selkeitä logoja, jotka toimivat saumattomasti kaikissa kanavissa.</p>
+                </div>
+                <div class="services-thumb-wrap"><img src="images/taustakuva-3.svg" loading="lazy" alt="Taustakuva" class="services-thumb"></div>
               </div>
               <div class="services-item">
                 <div class="services-icon-wrap"><img src="images/haku-ikoni.svg" loading="lazy" alt="Haku ikoni" class="services-icon"></div>
@@ -566,9 +566,9 @@
                 </div>
               </div>
               <div class="faq-right">
-                <div data-current="Tab 1" data-easing="ease" data-duration-in="300" data-duration-out="100" class="faq-accordion w-tabs">
+                <div data-current="" data-easing="ease" data-duration-in="300" data-duration-out="100" class="faq-accordion w-tabs">
                   <div class="faq-accordion-wrap w-tab-menu">
-                    <a data-w-tab="Tab 1" data-w-id="6178daa7-38eb-2a30-a7a3-854c6dfca2fa" class="faq-accordion-item w-inline-block w-tab-link w--current">
+                    <a data-w-tab="Tab 1" data-w-id="6178daa7-38eb-2a30-a7a3-854c6dfca2fa" class="faq-accordion-item w-inline-block w-tab-link">
                       <div class="faq-item">
                         <div class="faq-title-wrap">
                           <h3 class="faq-title">Mitä ylläpitokustannuksia kotisivuissa on?</h3>
@@ -661,7 +661,7 @@
                     </a>
                   </div>
                   <div class="hide w-tab-content">
-                    <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active"></div>
+                    <div data-w-tab="Tab 1" class="w-tab-pane"></div>
                     <div data-w-tab="Tab 2" class="w-tab-pane"></div>
                     <div data-w-tab="Tab 3" class="w-tab-pane"></div>
                     <div data-w-tab="Tab 4" class="w-tab-pane"></div>
