--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 15:10:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 15:32:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -329,6 +329,7 @@
                         </a>
                         <div class="projects-title-wrap">
                           <a href="#" class="projects-title">PreLex Oy</a>
+                          <p class="project-subtitle">Logo + Pro -kotisivut</p>
                         </div>
                       </div>
                     </div>
@@ -346,6 +347,7 @@
                         </a>
                         <div class="projects-title-wrap">
                           <a href="#" class="projects-title">Lännentilan Leipomo Oy</a>
+                          <p class="project-subtitle">Logo + Pro -kotisivut</p>
                         </div>
                       </div>
                     </div>
@@ -363,6 +365,7 @@
                         </a>
                         <div class="projects-title-wrap">
                           <a href="#" class="projects-title">MR Car Detailing Oy</a>
+                          <p class="project-subtitle">Logo + Pro -kotisivut</p>
                         </div>
                       </div>
                     </div>
@@ -380,6 +383,7 @@
                         </a>
                         <div class="projects-title-wrap">
                           <a href="#" class="projects-title">FINHEM Oy</a>
+                          <p class="project-subtitle">Pro -kotisivut</p>
                         </div>
                       </div>
                     </div>
