--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 15:10:02 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 15:32:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed16" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -116,6 +116,7 @@
                     </a>
                     <div class="projects-title-wrap">
                       <a href="#" class="projects-title">PreLex Oy</a>
+                      <p class="project-subtitle">Logo + Pro -kotisivut</p>
                     </div>
                   </div>
                 </div>
@@ -133,6 +134,7 @@
                     </a>
                     <div class="projects-title-wrap">
                       <a href="#" class="projects-title">Lännentilan Leipomo Oy</a>
+                      <p class="project-subtitle">Logo + Pro -kotisivut</p>
                     </div>
                   </div>
                 </div>
@@ -150,6 +152,7 @@
                     </a>
                     <div class="projects-title-wrap">
                       <a href="#" class="projects-title">MR Car Detailing Oy</a>
+                      <p class="project-subtitle">Logo + Pro -kotisivut</p>
                     </div>
                   </div>
                 </div>
@@ -167,6 +170,7 @@
                     </a>
                     <div class="projects-title-wrap">
                       <a href="#" class="projects-title">FINHEM Oy</a>
+                      <p class="project-subtitle">Pro -kotisivut</p>
                     </div>
                   </div>
                 </div>
@@ -186,6 +190,43 @@
                     </a>
                     <div class="projects-title-wrap">
                       <a href="#" class="projects-title">FinsPro Oy</a>
+                      <p class="project-subtitle">Pro -kotisivut</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="project-cms-item">
+                <div class="projects-cms-item">
+                  <div class="projects-item">
+                    <a href="https://jalaw.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Jalaw_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Jalaw_Mockup.webp 500w, images/Jalaw_Mockup.webp 800w, images/Jalaw_Mockup.webp 1080w, images/Jalaw_Mockup.webp 1600w, images/Jalaw_Mockup.webp 2000w, images/Jalaw_Mockup.webp 2600w, images/Jalaw_Mockup.webp 2800w" alt="Jalaw mallikuva" class="projects-thumb">
+                      <div class="projects-btn-wrap">
+                        <div class="projects-btn-text">Tutustu</div>
+                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
+                          </svg></div>
+                      </div>
+                    </a>
+                    <div class="projects-title-wrap">
+                      <a href="#" class="projects-title">Jalaw Oy</a>
+                      <p class="project-subtitle">One Pager -kotisivut</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="project-cms-item">
+                <div class="projects-cms-item">
+                  <div class="projects-item">
+                    <a href="https://w-putki.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/W-Putki_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/W-Putki_Mockup.webp 500w, images/W-Putki_Mockup.webp 800w, images/W-Putki_Mockup.webp 1080w, images/W-Putki_Mockup.webp 1600w, images/W-Putki_Mockup.webp 2000w, images/W-Putki_Mockup.webp 2600w, images/W-Putki_Mockup.webp 2800w" alt="W-Putki mallikuva" class="projects-thumb">
+                      <div class="projects-btn-wrap">
+                        <div class="projects-btn-text">Tutustu</div>
+                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
+                          </svg></div>
+                      </div>
+                    </a>
+                    <div class="projects-title-wrap">
+                      <a href="#" class="projects-title">W-Putki</a>
+                      <p class="project-subtitle">Logo + One Pager -kotisivut</p>
                     </div>
                   </div>
                 </div>
@@ -203,6 +244,43 @@
                     </a>
                     <div class="projects-title-wrap">
                       <a href="#" class="projects-title">Vrum Vrum Oy</a>
+                      <p class="project-subtitle">Logo + Pro -kotisivut</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="project-cms-item">
+                <div class="projects-cms-item">
+                  <div class="projects-item">
+                    <a href="https://www.henrikontkin.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Henri_Kontkin_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Henri_Kontkin_Mockup.webp 500w, images/Henri_Kontkin_Mockup.webp 800w, images/Henri_Kontkin_Mockup.webp 1080w, images/Henri_Kontkin_Mockup.webp 1600w, images/Henri_Kontkin_Mockup.webp 2000w, images/Henri_Kontkin_Mockup.webp 2600w, images/Henri_Kontkin_Mockup.webp 2800w" alt="Henri Kontkin mallikuva" class="projects-thumb">
+                      <div class="projects-btn-wrap">
+                        <div class="projects-btn-text">Tutustu</div>
+                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
+                          </svg></div>
+                      </div>
+                    </a>
+                    <div class="projects-title-wrap">
+                      <a href="#" class="projects-title">Henri Kontkin</a>
+                      <p class="project-subtitle">Pro -kotisivut</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="project-cms-item">
+                <div class="projects-cms-item">
+                  <div class="projects-item">
+                    <a href="https://www.rphasennus.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/RPH_Asennus_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/RPH_Asennus_Mockup.webp 500w, images/RPH_Asennus_Mockup.webp 800w, images/RPH_Asennus_Mockup.webp 1080w, images/RPH_Asennus_Mockup.webp 1600w, images/RPH_Asennus_Mockup.webp 2000w, images/RPH_Asennus_Mockup.webp 2600w, images/RPH_Asennus_Mockup.webp 2800w" alt="RPH Asennus Oy mallikuva" class="projects-thumb">
+                      <div class="projects-btn-wrap">
+                        <div class="projects-btn-text">Tutustu</div>
+                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
+                          </svg></div>
+                      </div>
+                    </a>
+                    <div class="projects-title-wrap">
+                      <a href="#" class="projects-title">RPH Asennus Oy</a>
+                      <p class="project-subtitle">One Pager -kotisivut</p>
                     </div>
                   </div>
                 </div>
