Update home buttons

--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 15:32:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 17:00:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed16" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -198,6 +198,24 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
+                    <a href="https://tuias.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Tuias_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Tuias_Mockup.webp 500w, images/Tuias_Mockup.webp 800w, images/Tuias_Mockup.webp 1080w, images/Tuias_Mockup.webp 1600w, images/Tuias_Mockup.webp 2000w, images/Tuias_Mockup.webp 2600w, images/Tuias_Mockup.webp 2800w" alt="Tuias Oy mallikuva" class="projects-thumb">
+                      <div class="projects-btn-wrap">
+                        <div class="projects-btn-text">Tutustu</div>
+                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
+                          </svg></div>
+                      </div>
+                    </a>
+                    <div class="projects-title-wrap">
+                      <a href="#" class="projects-title">Tuias Oy</a>
+                      <p class="project-subtitle">Verkkokauppa</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="project-cms-item">
+                <div class="projects-cms-item">
+                  <div class="projects-item">
                     <a href="https://jalaw.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Jalaw_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Jalaw_Mockup.webp 500w, images/Jalaw_Mockup.webp 800w, images/Jalaw_Mockup.webp 1080w, images/Jalaw_Mockup.webp 1600w, images/Jalaw_Mockup.webp 2000w, images/Jalaw_Mockup.webp 2600w, images/Jalaw_Mockup.webp 2800w" alt="Jalaw mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
@@ -245,6 +263,24 @@
                     <div class="projects-title-wrap">
                       <a href="#" class="projects-title">Vrum Vrum Oy</a>
                       <p class="project-subtitle">Logo + Pro -kotisivut</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="project-cms-item">
+                <div class="projects-cms-item">
+                  <div class="projects-item">
+                    <a href="https://www.laki-vsc.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Laki_VSC_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Laki_VSC_Mockup.webp 500w, images/Laki_VSC_Mockup.webp 800w, images/Laki_VSC_Mockup.webp 1080w, images/Laki_VSC_Mockup.webp 1600w, images/Laki_VSC_Mockup.webp 2000w, images/Laki_VSC_Mockup.webp 2600w, images/Laki_VSC_Mockup.webp 2800w" alt="Laki-VSC mallikuva" class="projects-thumb">
+                      <div class="projects-btn-wrap">
+                        <div class="projects-btn-text">Tutustu</div>
+                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
+                          </svg></div>
+                      </div>
+                    </a>
+                    <div class="projects-title-wrap">
+                      <a href="#" class="projects-title">Laki-VSC Oy</a>
+                      <p class="project-subtitle">Pro -kotisivut</p>
                     </div>
                   </div>
                 </div>
