--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 15:32:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 17:00:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed26" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -245,9 +245,9 @@
                     </div>
                     <div class="btn-shape-2"></div>
                   </a>
-                  <a href="tel:+358449819623" class="btn-wrap w-inline-block">
+                  <a href="tiimi" class="btn-wrap w-inline-block">
                     <div class="btn-inner">
-                      <div>Soita meille</div>
+                      <div>Tutustu tiimiin</div>
                       <div class="btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M10.4766 6.1664L6.00665 1.6964L7.18498 0.518066L13.6666 6.99973L7.18498 13.4814L6.00665 12.3031L10.4766 7.83307H0.333313V6.1664H10.4766Z" fill="currentColor"></path>
                         </svg></div>
