--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 15:32:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 17:00:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -83,7 +83,16 @@
                 <div class="hero-btn-wrap">
                   <a href="tyot" class="btn-wrap w-inline-block">
                     <div class="btn-inner">
-                      <div>Aikaisemmat projektit</div>
+                      <div>Tutustu töihimme</div>
+                      <div class="btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M10.4766 6.1664L6.00665 1.6964L7.18498 0.518066L13.6666 6.99973L7.18498 13.4814L6.00665 12.3031L10.4766 7.83307H0.333313V6.1664H10.4766Z" fill="currentColor"></path>
+                        </svg></div>
+                    </div>
+                    <div class="btn-shape"></div>
+                  </a>
+                  <a href="tiimi" class="btn-wrap-2 solution-btn-1 w-inline-block">
+                    <div class="btn-inner">
+                      <div>Tutustu tiimiin</div>
                       <div class="btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M10.4766 6.1664L6.00665 1.6964L7.18498 0.518066L13.6666 6.99973L7.18498 13.4814L6.00665 12.3031L10.4766 7.83307H0.333313V6.1664H10.4766Z" fill="currentColor"></path>
                         </svg></div>
@@ -389,6 +398,16 @@
                     </div>
                   </div>
                 </div>
+                <div class="space _42"></div>
+                <a href="tyot" class="btn-wrap w-inline-block">
+                  <div class="btn-inner">
+                    <div>Katso kaikki</div>
+                    <div class="btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10.4766 6.1664L6.00665 1.6964L7.18498 0.518066L13.6666 6.99973L7.18498 13.4814L6.00665 12.3031L10.4766 7.83307H0.333313V6.1664H10.4766Z" fill="currentColor"></path>
+                      </svg></div>
+                  </div>
+                  <div class="btn-shape"></div>
+                </a>
               </div>
             </div>
           </div>
@@ -545,9 +564,9 @@
                     </div>
                     <div class="btn-shape-2"></div>
                   </a>
-                  <a href="tel:+358449819623" class="btn-wrap w-inline-block">
+                  <a href="tiimi" class="btn-wrap w-inline-block">
                     <div class="btn-inner">
-                      <div>Soita meille</div>
+                      <div>Tutustu tiimiin</div>
                       <div class="btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M10.4766 6.1664L6.00665 1.6964L7.18498 0.518066L13.6666 6.99973L7.18498 13.4814L6.00665 12.3031L10.4766 7.83307H0.333313V6.1664H10.4766Z" fill="currentColor"></path>
                         </svg></div>
