--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 17:00:04 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 17:40:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed16" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -198,7 +198,7 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://tuias.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Tuias_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Tuias_Mockup.webp 500w, images/Tuias_Mockup.webp 800w, images/Tuias_Mockup.webp 1080w, images/Tuias_Mockup.webp 1600w, images/Tuias_Mockup.webp 2000w, images/Tuias_Mockup.webp 2600w, images/Tuias_Mockup.webp 2800w" alt="Tuias Oy mallikuva" class="projects-thumb">
+                    <a href="https://tuias.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Tuias_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Tuias_Mockup-p-500.webp 500w, images/Tuias_Mockup-p-800.webp 800w, images/Tuias_Mockup-p-1080.webp 1080w, images/Tuias_Mockup-p-1600.webp 1600w, images/Tuias_Mockup-p-2000.webp 2000w, images/Tuias_Mockup-p-2600.webp 2600w, images/Tuias_Mockup.webp 2800w" alt="Tuias Oy mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
                         <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -216,7 +216,7 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://jalaw.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Jalaw_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Jalaw_Mockup.webp 500w, images/Jalaw_Mockup.webp 800w, images/Jalaw_Mockup.webp 1080w, images/Jalaw_Mockup.webp 1600w, images/Jalaw_Mockup.webp 2000w, images/Jalaw_Mockup.webp 2600w, images/Jalaw_Mockup.webp 2800w" alt="Jalaw mallikuva" class="projects-thumb">
+                    <a href="https://jalaw.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Jalaw_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Jalaw_Mockup-p-500.webp 500w, images/Jalaw_Mockup-p-800.webp 800w, images/Jalaw_Mockup-p-1080.webp 1080w, images/Jalaw_Mockup-p-1600.webp 1600w, images/Jalaw_Mockup-p-2000.webp 2000w, images/Jalaw_Mockup-p-2600.webp 2600w, images/Jalaw_Mockup.webp 2800w" alt="Jalaw mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
                         <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -234,7 +234,7 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://w-putki.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/W-Putki_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/W-Putki_Mockup.webp 500w, images/W-Putki_Mockup.webp 800w, images/W-Putki_Mockup.webp 1080w, images/W-Putki_Mockup.webp 1600w, images/W-Putki_Mockup.webp 2000w, images/W-Putki_Mockup.webp 2600w, images/W-Putki_Mockup.webp 2800w" alt="W-Putki mallikuva" class="projects-thumb">
+                    <a href="https://w-putki.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/W-Putki_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/W-Putki_Mockup-p-500.webp 500w, images/W-Putki_Mockup-p-800.webp 800w, images/W-Putki_Mockup-p-1080.webp 1080w, images/W-Putki_Mockup-p-1600.webp 1600w, images/W-Putki_Mockup-p-2000.webp 2000w, images/W-Putki_Mockup-p-2600.webp 2600w, images/W-Putki_Mockup.webp 2800w" alt="W-Putki mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
                         <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -270,7 +270,7 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://www.laki-vsc.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Laki_VSC_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Laki_VSC_Mockup.webp 500w, images/Laki_VSC_Mockup.webp 800w, images/Laki_VSC_Mockup.webp 1080w, images/Laki_VSC_Mockup.webp 1600w, images/Laki_VSC_Mockup.webp 2000w, images/Laki_VSC_Mockup.webp 2600w, images/Laki_VSC_Mockup.webp 2800w" alt="Laki-VSC mallikuva" class="projects-thumb">
+                    <a href="https://www.laki-vsc.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Laki_VSC_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Laki_VSC_Mockup-p-500.webp 500w, images/Laki_VSC_Mockup-p-800.webp 800w, images/Laki_VSC_Mockup-p-1080.webp 1080w, images/Laki_VSC_Mockup-p-1600.webp 1600w, images/Laki_VSC_Mockup-p-2000.webp 2000w, images/Laki_VSC_Mockup-p-2600.webp 2600w, images/Laki_VSC_Mockup.webp 2800w" alt="Laki-VSC mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
                         <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -288,7 +288,7 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://www.henrikontkin.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Henri_Kontkin_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Henri_Kontkin_Mockup.webp 500w, images/Henri_Kontkin_Mockup.webp 800w, images/Henri_Kontkin_Mockup.webp 1080w, images/Henri_Kontkin_Mockup.webp 1600w, images/Henri_Kontkin_Mockup.webp 2000w, images/Henri_Kontkin_Mockup.webp 2600w, images/Henri_Kontkin_Mockup.webp 2800w" alt="Henri Kontkin mallikuva" class="projects-thumb">
+                    <a href="https://www.henrikontkin.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/Henri_Kontkin_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/Henri_Kontkin_Mockup-p-500.webp 500w, images/Henri_Kontkin_Mockup-p-800.webp 800w, images/Henri_Kontkin_Mockup-p-1080.webp 1080w, images/Henri_Kontkin_Mockup-p-1600.webp 1600w, images/Henri_Kontkin_Mockup-p-2000.webp 2000w, images/Henri_Kontkin_Mockup-p-2600.webp 2600w, images/Henri_Kontkin_Mockup.webp 2800w" alt="Henri Kontkin mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
                         <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -306,7 +306,7 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://www.rphasennus.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/RPH_Asennus_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/RPH_Asennus_Mockup.webp 500w, images/RPH_Asennus_Mockup.webp 800w, images/RPH_Asennus_Mockup.webp 1080w, images/RPH_Asennus_Mockup.webp 1600w, images/RPH_Asennus_Mockup.webp 2000w, images/RPH_Asennus_Mockup.webp 2600w, images/RPH_Asennus_Mockup.webp 2800w" alt="RPH Asennus Oy mallikuva" class="projects-thumb">
+                    <a href="https://www.rphasennus.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/RPH_Asennus_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/RPH_Asennus_Mockup-p-500.webp 500w, images/RPH_Asennus_Mockup-p-800.webp 800w, images/RPH_Asennus_Mockup-p-1080.webp 1080w, images/RPH_Asennus_Mockup-p-1600.webp 1600w, images/RPH_Asennus_Mockup-p-2000.webp 2000w, images/RPH_Asennus_Mockup-p-2600.webp 2600w, images/RPH_Asennus_Mockup.webp 2800w" alt="RPH Asennus Oy mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
                         <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
