--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 17:40:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 17:50:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed0e" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -513,7 +513,10 @@
                   <div class="pricing-item-top">
                     <div class="pricing-item-heading">
                       <div class="pricing-title-wrap">
-                        <p class="pricing-title">Chatbot -työkalu</p>
+                        <div class="div-block-2">
+                          <p class="pricing-title">Chatbot -työkalu</p>
+                          <div id="w-node-_126aaeee-a723-6734-8842-5998c6dcc578-6226f583" class="btn-wrap small">Uusi</div>
+                        </div>
                       </div>
                       <div class="pricing-price-wrap">
                         <h2 class="pricing-price">300€</h2>
