Configure Cookiebot integration

--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 17:50:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Apr 22 2025 06:43:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed26" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -26,6 +26,7 @@
   <link href="https://www.nords.fi/hinnasto" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
   <div class="page-wrapper">
@@ -207,12 +208,12 @@
                       <div class="pricing-list-wrap">
                         <div class="pricing-feature-list w-richtext">
                           <ul role="list">
-                            <li>24/7 asiakaspalvelu</li>
-                            <li>Räätälöity sisältö</li>
-                            <li>Usean kielen tuki</li>
-                            <li>Nopeat vasteajat</li>
-                            <li>Kerää liidejä</li>
-                            <li>Brändin mukainen sävy</li>
+                            <li>24/7 asiakaspalvelija</li>
+                            <li>Räätälöity vastaustyyli</li>
+                            <li>Monikielinen avustaja</li>
+                            <li>Nopeat vastausajat</li>
+                            <li>Koulutettu juuri sinun yritykselle</li>
+                            <li>Jatkuva kehitys</li>
                             <li>Tyytyväisyystakuu</li>
                           </ul>
                         </div>
